--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="scss/main.css">
+    <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
 <header>
     <nav>
-        <a href="#"><img src="scss/img/retina_logo.png" alt=""></a>
+        <a href="#"><img src="retina_logo.png" alt=""></a>
         <ul>
             <li>Home</li>
             <li>Elements</li>
