--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 </header> 
 
 
-<div class="hadding">
-    <h1>Lorem ipsum dolor sit amet.</h1>
-    <p>Lorem ipsum dolor sit.</p>
+<div class="banner">
+ <img src="img/pngtree-innovative-3d-mobile-mockup-paired-with-web-development-banner-and-laptop-picture-image_5592791.jpg" alt="">
 </div>
 <!-- <div class="baner">
     <img src="scss/img/banner-bg-1.jpg" alt="">
